# HW7-Regression

./: pyproject.toml  requirements.txt
.github/workflows/: test.yml
regression/: logreg.py
test/: test_logreg.py
